- added Photo Resizing GUI improvements (Ticket #99)