@@ -3,10 +3,13 @@ package com.wordpress.view;
 import java.util.Hashtable;
 
 import net.rim.device.api.ui.Field;
+import net.rim.device.api.ui.FieldChangeListener;
+import net.rim.device.api.ui.FocusChangeListener;
 import net.rim.device.api.ui.Manager;
 import net.rim.device.api.ui.component.BasicEditField;
 import net.rim.device.api.ui.component.ButtonField;
 import net.rim.device.api.ui.component.CheckboxField;
+import net.rim.device.api.ui.component.Dialog;
 import net.rim.device.api.ui.component.LabelField;
 import net.rim.device.api.ui.component.ObjectChoiceField;
 import net.rim.device.api.ui.component.PasswordEditField;
@@ -15,6 +18,8 @@ import net.rim.device.api.ui.container.HorizontalFieldManager;
 import com.wordpress.bb.WordPressResource;
 import com.wordpress.controller.BaseController;
 import com.wordpress.controller.BlogOptionsController;
+import com.wordpress.utils.ImageUtils;
+import com.wordpress.utils.log.Log;
 import com.wordpress.view.component.BorderedFieldManager;
 
 public class BlogOptionsView extends StandardBaseView {
@@ -23,11 +28,16 @@ public class BlogOptionsView extends StandardBaseView {
 	private BasicEditField userNameField;
 	private PasswordEditField passwordField;
 	private ObjectChoiceField  maxRecentPost;
+	private BorderedFieldManager rowResizePhotos;
 	private CheckboxField resizePhoto;
+	private HorizontalFieldManager rowImageResizeWidth;
+	private HorizontalFieldManager rowImageResizeHeight;
 	private BasicEditField imageResizeWidthField;
 	private BasicEditField imageResizeHeightField;
 	private CheckboxField commentNotifications;
 	private CheckboxField enableLocation;
+	private Integer imageResizeWidth;
+	private Integer imageResizeHeight;
 	
 	HorizontalFieldManager buttonsManager;
 	
@@ -36,11 +46,21 @@ public class BlogOptionsView extends StandardBaseView {
 	}
 	
 	public Integer getImageResizeWidth() {
-		return Integer.valueOf(imageResizeWidthField.getText());
+		if(imageResizeWidthField != null) {
+			return Integer.valueOf(imageResizeWidthField.getText());
+		}
+		else {
+			return new Integer(ImageUtils.DEFAULT_RESIZE_WIDTH);
+		}
 	}
 	
 	public Integer getImageResizeHeight() {
-		return Integer.valueOf(imageResizeHeightField.getText());
+		if(imageResizeHeightField != null) {
+			return Integer.valueOf(imageResizeHeightField.getText());
+		}
+		else {
+			return new Integer(ImageUtils.DEFAULT_RESIZE_HEIGHT);
+		}
 	}
 
 	public boolean isLocation(){
@@ -73,8 +93,8 @@ public class BlogOptionsView extends StandardBaseView {
 	        String[] recentPost=(String[])values.get("recentpost");
 	        int recentPostSelect = ((Integer)values.get("recentpostselected")).intValue();
 			boolean isResImg = ((Boolean)values.get("isresphotos")).booleanValue();
-			Integer imageResizeWidth = (Integer)values.get("imageResizeWidth");
-			Integer imageResizeHeight = (Integer)values.get("imageResizeHeight");
+			imageResizeWidth = (Integer)values.get("imageResizeWidth");
+			imageResizeHeight = (Integer)values.get("imageResizeHeight");
 			boolean isLocation = ((Boolean)values.get("islocation")).booleanValue();
 			boolean isCommentNotifications = ((Boolean)values.get("iscommentnotifications")).booleanValue();
 	        //end loading
@@ -111,34 +131,20 @@ public class BlogOptionsView extends StandardBaseView {
             add(rowMaxRecentPost);            
 
             //row resize photos
-            BorderedFieldManager rowResizePhotos = new BorderedFieldManager(
+            rowResizePhotos = new BorderedFieldManager(
 	        		Manager.NO_HORIZONTAL_SCROLL
 	        		| Manager.NO_VERTICAL_SCROLL);
     		resizePhoto=new CheckboxField(_resources.getString(WordPressResource.LABEL_RESIZEPHOTOS), isResImg);
+    		resizePhoto.setChangeListener(listenerResizePhotoCheckbox);
     		rowResizePhotos.add(resizePhoto);
      		BasicEditField lblDesc = getDescriptionTextField(_resources.getString(WordPressResource.DESCRIPTION_RESIZEPHOTOS));
 			rowResizePhotos.add(lblDesc);
 			
-            HorizontalFieldManager rowImageResizeWidth = new HorizontalFieldManager();
-            rowImageResizeWidth.add( getLabel(_resources.getString(WordPressResource.LABEL_RESIZE_IMAGE_WIDTH)));
-            imageResizeWidthField = new BasicEditField(
-            		"", 
-            		(imageResizeWidth == null ? "" : imageResizeWidth.toString()), 
-            		4, 
-            		Field.EDITABLE | BasicEditField.FILTER_NUMERIC);
-            rowImageResizeWidth.add(imageResizeWidthField);
-            rowResizePhotos.add(rowImageResizeWidth);
+			if(isResImg) {
+				addImageResizeWidthField();
+				addImageResizeHeightField();
+			}
             
-            HorizontalFieldManager rowImageResizeHeight = new HorizontalFieldManager();
-            rowImageResizeHeight.add( getLabel(_resources.getString(WordPressResource.LABEL_RESIZE_IMAGE_HEIGHT)));
-            imageResizeHeightField = new BasicEditField(
-            		"", 
-            		(imageResizeHeight == null ? "" : imageResizeHeight.toString()), 
-            		4, 
-            		Field.EDITABLE | BasicEditField.FILTER_NUMERIC);
-            rowImageResizeHeight.add(imageResizeHeightField);
-            rowResizePhotos.add(rowImageResizeHeight);
-
 			add(rowResizePhotos);
 
             //row comment notifies and location
@@ -172,4 +178,95 @@ public class BlogOptionsView extends StandardBaseView {
 	public BaseController getController() {
 		return controller;
 	}
+	
+	// Enable or disable image resize width/height fields when the "resize image" checkbox changes.
+	private FieldChangeListener listenerResizePhotoCheckbox = new FieldChangeListener() {
+	    public void fieldChanged(Field field, int context) {
+	    	if(resizePhoto.getChecked() == true) {
+	    		addImageResizeWidthField();
+	    		addImageResizeHeightField();
+	    	}
+	    	else {
+	    	       	rowResizePhotos.delete(rowImageResizeWidth);
+	    	       	rowImageResizeWidth = null;
+	    	       	rowResizePhotos.delete(rowImageResizeHeight);
+	    	       	rowImageResizeHeight = null;
+	    	}
+	   }
+	};
+	
+	// Recalculate the image resize height whenever the image resize width changes. Aspect ratio is fixed.
+	private FocusChangeListener listenerImageResizeWidthField = new FocusChangeListener() {
+	    public void focusChanged(Field field, int eventType) {
+	    	if((eventType == FocusChangeListener.FOCUS_LOST) && (imageResizeWidthField.isDirty())) {
+		    	try {
+		    		int newWidth = Integer.parseInt(imageResizeWidthField.getText());
+		    		if(newWidth == 0) {
+		    			Dialog.alert(_resources.getString(WordPressResource.ERROR_RESIZE_WIDTH));
+		    			imageResizeWidthField.setText(String.valueOf(ImageUtils.DEFAULT_RESIZE_WIDTH));
+		    			imageResizeHeightField.setText(String.valueOf(ImageUtils.DEFAULT_RESIZE_HEIGHT));
+		    		}
+		    		else {
+		    			int newHeight = (int)(newWidth * 0.75);
+		    			imageResizeHeightField.setText(Integer.toString(newHeight));
+		    		}
+		    	}
+		    	catch(NumberFormatException e) {
+		    		Log.error("Unexpected condition: ImageResizeWidthField was not numeric in BlogOptionsView.");
+		    	}
+	    	}
+	   }
+	};
+
+	// Recalculate the image resize width whenever the image resize height changes. Aspect ratio is fixed.
+	private FocusChangeListener listenerImageResizeHeightField = new FocusChangeListener() {
+	    public void focusChanged(Field field, int eventType) {
+	    	if((eventType == FocusChangeListener.FOCUS_LOST) && (imageResizeHeightField.isDirty())) {
+		    	try {
+		    		int newHeight = Integer.parseInt(imageResizeHeightField.getText());
+		    		if(newHeight == 0) {
+		    			Dialog.alert(_resources.getString(WordPressResource.ERROR_RESIZE_HEIGHT));
+		    			imageResizeWidthField.setText(String.valueOf(ImageUtils.DEFAULT_RESIZE_WIDTH));
+		    			imageResizeHeightField.setText(String.valueOf(ImageUtils.DEFAULT_RESIZE_HEIGHT));
+		    		}
+		    		else {
+		    			int newWidth = (int)((newHeight * 1.3333) + 1);
+		    			imageResizeWidthField.setText(Integer.toString(newWidth));
+		    		}
+		    	}
+		    	catch(NumberFormatException e) {
+		    		Log.error("Unexpected condition: ImageResizeHeightField was not numeric in BlogOptionsView.");
+		    	}
+	    	}
+	   }
+	};
+	
+	private void addImageResizeWidthField() {
+        rowImageResizeWidth = new HorizontalFieldManager();
+        rowImageResizeWidth.add( getLabel(_resources.getString(WordPressResource.LABEL_RESIZE_IMAGE_WIDTH)));      
+        imageResizeWidthField = new BasicEditField(
+        		"", 
+        		(imageResizeWidth == null ? "" : imageResizeWidth.toString()), 
+        		4, 
+        		Field.EDITABLE | BasicEditField.FILTER_NUMERIC);
+        
+        imageResizeWidthField.setFocusListener(listenerImageResizeWidthField);
+        rowImageResizeWidth.add(imageResizeWidthField);
+       	rowResizePhotos.add(rowImageResizeWidth);
+	}
+
+	private void addImageResizeHeightField() {
+	    rowImageResizeHeight = new HorizontalFieldManager();
+	    rowImageResizeHeight.add( getLabel(_resources.getString(WordPressResource.LABEL_RESIZE_IMAGE_HEIGHT)));
+	    imageResizeHeightField = new BasicEditField(
+	    		"", 
+	    		(imageResizeHeight == null ? "" : imageResizeHeight.toString()), 
+	    		4, 
+	    		Field.EDITABLE | BasicEditField.FILTER_NUMERIC);
+	    
+	    imageResizeHeightField.setFocusListener(listenerImageResizeHeightField);
+	    rowImageResizeHeight.add(imageResizeHeightField);
+    	rowResizePhotos.add(rowImageResizeHeight);
+	}
+
 }
